# TinyNetFlow

./: .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  README.md  xmake.lua
docs/: TODO.md  (+2 more)
examples/UDP/: CMakeLists.txt  udpclient.cpp  udpclient_multicast.cpp  udpserver.cpp  udpserver_multicast.cpp
netflow/Com/: CMakeLists.txt
netflow/Com/http/: CMakeLists.txt  HttpContext.cpp  HttpRequest.h  HttpResponse.cpp  HttpServer.cpp  HttpServer.h
netflow/Com/http/tests/: http_request_unittest.cpp  http_server_test.cpp
netflow/Com/mqtt/: CMakeLists.txt  MqttClient.h  MqttContext.cpp  MqttContext.h  MqttHeaderCodec.cpp
netflow/Com/mqtt/tests/: MqttTest.cpp  MqttTest.h
netflow/Com/someip/: CMakeLists.txt  SomeIpHeaderCodec.cpp
netflow/Com/someip/application/: ApplicationImpl.h  Runtime.cpp  SomeIpRuntime.cpp  SomeIpRuntime.h
netflow/Com/someip/endpoint/: ClientEndpoint.h  ClientEndpointTcp.cpp  ClientEndpointTcp.h  ClientEndpointUdp.h  ClientEndpointUds.h  Endpoint.h  EndpointDescription.cpp  ServerEndpoint.h  ServerEndpointTcp.cpp  ServerEndpointTcp.h  ServerEndpointUdp.h  ServerEndpointUds.h
netflow/Com/someip/interface/: Application.h  Configuration.h  Handler.h  Message.h  Payload.h  Runtime.h  TypeDefine.h
netflow/Com/someip/message/: SomeIpHeader.cpp  SomeIpHeader.h  SomeIpMessageImpl.cpp  SomeIpMessageImpl.h  SomeIpPayload.cpp  SomeIpPayload.h
netflow/Com/someip/protocol/: ComToSomeIpd.cpp
netflow/Com/someip/someipd/: CMakeLists.txt
netflow/Com/someip/someipd/serviceDiscovery/: SdEntry.h  SdEventGroupEntry.h  SdMessage.cpp  SdMessage.h  SdOption.cpp  SdOption.h  SdOptionIpv4.h  SdOptionIpv6.h  SdOptionLoadBalancing.h  SdServiceEntry.cpp
netflow/Com/someip/someipdClient/: README.md
netflow/OSAdaptor/: CMakeLists.txt  README.md
netflow/OSAdaptor/IO/IPC/UDS/: PreDefineUds.h  UdsClient.h  UdsServer.h
netflow/OSAdaptor/IO/IPC/shm/: PreDefineShm.h  README.md  ShmReader.h
netflow/OSAdaptor/IO/net/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Callbacks.h  Channel.cpp  Channel.h  Connector.cpp  InetAddr.h  Socket.h  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
netflow/OSAdaptor/IO/net/UDP/: CMakeLists.txt  UdpClient.h  UdpServer.cpp  UdpServer.h
netflow/OSAdaptor/IO/net/tests/: Buffer_unittest.cpp  Channel_test.cpp  EchoClient_unittest.cpp  EchoServer_unittest.cpp  EventLoopThreadPool_unittest.cpp  EventLoopThread_unittest.cpp  EventLoop_unittest.cpp  InetAddr_unittest.cpp  TcpClient_reg1.cpp  TimerQueue_unittest.cpp
netflow/OSAdaptor/IO/reactor/: Channel.cpp  Channel.h  EpollPoller.h  EventLoop.cpp  EventLoop.h
netflow/OSAdaptor/include/IO/IPC/: IpcMediaAddr.h
netflow/OSAdaptor/include/IO/ipc/: IpcMediaAddr.h
netflow/OSAdaptor/include/IO/net/: Acceptor.h  AddressCast.h  Buffer.h  Callbacks.h  Connector.h  Endian.h  InetAddr.h  SocketInterface.h  TcpClient.h  TcpConnection.h  TcpProtocol.h  TcpServer.h  TcpServerSocket.h  TcpSocket.h  UdpClient.h  UdpProtocol.h  UdpServer.h  UdpSocket.h
netflow/OSAdaptor/include/IO/reactor/: Channel.h  EpollPoller.h  EventLoop.h  EventLoopThread.h  (+1 more)
netflow/OSAdaptor/include/process/: README.md
netflow/OSAdaptor/include/time/: Timer.h  TimerId.h  TimerQueue.h  TimerQueueHeap.h  Timestamp.h
netflow/OSAdaptor/src/time/: Timer.cpp  TimerQueue.cpp  Timestamp.cpp
netflow/OSAdaptor/time/: Timer.h  TimerQueue.cpp  TimerQueue.h  Timestamp.cpp
netflow/OSLayer/base/: CMakeLists.txt  README.md
netflow/http/: CMakeLists.txt  HttpContext.h  HttpServer.cpp  HttpServer.h
netflow/net/: Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cpp  EpollPoller.cpp  EventLoop.h  EventLoopThreadPool.cpp  InetAddr.cpp  InetAddr.h  SocketsOps.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h
netflow/net/UDP/: CMakeLists.txt  UdpClient.cpp  UdpClient.h  UdpMessage.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h  UdpSocketOps.cpp  UdpSocketOps.h
netflow/net/UDS/: CMakeLists.txt  PreDefine.h  UdsSocket.cpp  UdsSocket.h
netflow/net/tests/: Buffer_unittest.cpp  EchoClient_unittest.cpp  EchoServer_unittest.cpp  EventLoopThreadPool_unittest.cpp  EventLoopThread_unittest.cpp
src/base/: CMakeLists.txt  Glogger.cpp  Glogger.h  Logger.cpp  Logger.h  Logging.h  README.md  Timestamp.cpp  Timestamp.h  async_logging.cpp  async_logging.h  atomic.h  blocking_queue.h  bounded_blocking_queue.h  condition.cpp  condition.h  copyable.h  count_down_latch.cpp  count_down_latch.h  current_thread.cpp  current_thread.h  date.cpp  date.h  exception.cpp  exception.h  file_util.cpp  file_util.h  gzip_file.h  log_file.cpp  log_file.h  log_stream.cpp  log_stream.h  logging.cpp  logging.h  mutex.h  noncopyable.h  process_info.cpp  process_info.h  singleton.h  string_piece.h  (+12 more)
src/http/: CMakeLists.txt  HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  README.md
src/http/tests/: CMakeLists.txt  http_request_unittest.cpp  http_server_test.cpp
src/mqtt/: CMakeLists.txt  MqttClient.cpp  MqttClient.h  MqttContext.cpp  MqttContext.h  MqttHeaderCodec.cpp  MqttHeaderCodec.h  MqttProtocol.cpp  MqttProtocol.h  README.md
src/net/: Acceptor.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddr.cpp  InetAddr.h  README.md  Socket.cpp  Socket.h  SocketsOps.cpp  SocketsOps.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerId.h  TimerQueue.cpp  TimerQueue.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  acceptor.cpp  (+37 more)
src/net/UDP/: CMakeLists.txt  UdpClient.h  UdpSocketOps.h
src/net/poller/: default_poller.cpp  epoll_poller.cpp  epoll_poller.h  poll_poller.cpp  poll_poller.h
src/net/tests/: Buffer_unittest.cpp  CMakeLists.txt  Channel_test.cpp  EchoClient_unittest.cpp  EventLoop_unittest.cpp  InetAddr_unittest.cpp  TcpClient_reg1.cpp  TimerQueue_unittest.cpp
(+257 files in other folders)
