file(GLOB_RECURSE NETFLOW_NET_SRCS ${PROJECT_SOURCE_DIR}/src/net/*.cpp)
message(STATUS "NETFLOW_NET_SRCS : ${NETFLOW_NET_SRCS}")
file(GLOB_RECURSE NETFLOW_BASE_SRCS ${PROJECT_SOURCE_DIR}/src/base/*.cpp)
message(STATUS "NETFLOW_BASE_SRCS : ${NETFLOW_BASE_SRCS}")

file(GLOB_RECURSE NETFLOW_TOTAL_SRCS ${NETFLOW_NET_SRCS} ${NETFLOW_BASE_SRCS})
set(NETFLOW netflow)

add_library(${NETFLOW} ${NETFLOW_TOTAL_SRCS})
target_link_libraries(${NETFLOW} pthread)

install(TARGETS ${NETFLOW} DESTINATION lib)

file(GLOB_RECURSE NETFLOW_NET_HEADERS ${PROJECT_SOURCE_DIR}/src/net/*.h)
message(STATUS "NETFLOW_NET_HEADERS : ${NETFLOW_NET_HEADERS}")

install(FILES ${NETFLOW_NET_HEADERS} DESTINATION include/netflow/net)

